--- a/apps/crud/static/style.css
+++ b/apps/crud/static/style.css
@@ -1,3 +1,14 @@
 .crud {
     font-style: italic;
 }
+
+
+table {
+    border-collapse: collapse;
+}
+
+table,
+th,
+td {
+    border: 1px solid #c0c0c0;
+}
